// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListHelper Component should be contains a  "Buscando..." Text into component 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginTop": "5%",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#FFFFFF"
    hidesWhenStopped={true}
    size="small"
    style={
      Array [
        Object {},
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 15,
          "textAlign": "center",
        },
      ]
    }
  >
    Buscando...
  </Text>
</View>
`;

exports[`ListHelper Component should be contains a  "Nada foi encontrado" Text into component 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginTop": "5%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "PTSansNarrowRegular",
          "fontSize": 15,
          "textAlign": "center",
        },
      ]
    }
  >
    Ooops! 😞
 Nada foi encontrado, tente novamente...
  </Text>
</View>
`;
